objects/Re_Authorization__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>CASESAFEID(Channel_Partner_Authorization__r.Account__c)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Products_Info__c</fullName>
        <inlineHelpText>State the products that you have added to the authorization scope</inlineHelpText>
        <label>Add Products - Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_new_products_to_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark if you want to add product(s) into the Authorization. Remember to add the desired products as new Related List under &quot;Authorization Product Line&quot; under Authorization</inlineHelpText>
        <label>Add new products to Authorization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_information__c</fullName>
        <label>Additional information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorization_Approved_Date__c</fullName>
        <formula>IF (ISPICKVAL(Channel_Partner_Authorization__r.Approval_Progress__c, &apos;Approved&apos;), Channel_Partner_Authorization__r.Approved_Date__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorization Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Change_Channel_classes_in_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark if you want the BU to change channel classes?</inlineHelpText>
        <label>Change Channel classes in Authorization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Class_in_upcoming_Authorization__c</fullName>
        <inlineHelpText>Select all the channel class(es) that the account should be authorized for</inlineHelpText>
        <label>Channel Class in upcoming Authorization</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering, Procurement and Construction (EPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor (DIS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer (INST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Equipment Manufacturer (OEM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Builder (PBL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider (SPRO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator (SYIN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Distributor (TDIS)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Authorization</label>
        <referenceTo>Channel_Partner_Authorization__c</referenceTo>
        <relationshipLabel>Re Authorizations</relationshipLabel>
        <relationshipName>Re_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remove_Product_Info__c</fullName>
        <inlineHelpText>List what products to be removed from Authorization</inlineHelpText>
        <label>Remove Products - Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remove_Products_from_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark if you want to remove product(s) in Authorization. List products to be removed in the next field</inlineHelpText>
        <label>Remove Products from Authorization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_to_print_new_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark if you want the BU to prepare a new certification print</inlineHelpText>
        <label>Request to print new Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Want_to_extend_Programs__c</fullName>
        <description>R7A - Channel Authroization Re-Authorization</description>
        <label>Want to extend Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Technical Cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trademark Cooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Want_to_extend_validity__c</fullName>
        <inlineHelpText>Mark if you want the BU to extend authorization validity</inlineHelpText>
        <label>Extend validity until</label>
        <type>Date</type>
    </fields>
    <label>Re-Authorization</label>
    <listViews>
        <fullName>BU_Channel_Approvers_Re_Authorization</fullName>
        <filterScope>Queue</filterScope>
        <label>BU Channel Approvers</label>
        <queue>BU_Channel_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Re-Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Re Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>